# SimulationPlugins

ConfigGenerator/guiplugin/: system_gui.cc
ConfigGenerator/pythonGUI/: ConfigurationGeneration.py  SmoresKinematics.py  config_message_pb2.py  gztopic.py  kinematics.py
ConfigGenerator/pythonGUI/Embedding/: SmoresModule.py
ConfigGenerator/worldplugin/: ConfigEditor.cc  ConfigEditor.hh  ConfigGenerator.cc  ConfigGenerator.hh
ContactSensor/: ContactSensor.cc
GaitRecorder/pythonGUI/: Commands  CommandsExample  GaitEntry.py  GaitRecorder.py  Module.py  gait_recorder_message_pb2.py  setup.sh
GaitRecorder/worldplugin/: GaitRecorder.cc  SuperServer.cc  SuperServer.hh
GaitRecorder/worldplugin/msgs/: CMakeLists.txt  gait_recorder_message.proto
Libraries/: LibraryTemplate.hh
MessageDefinition/: CMakeLists.txt
ModelPlugin/: ModelController.cc  ModelController.hh
ModulePlugin/: CMakeLists.txt  ModelController.cc  ModelController.hh
WorldController/: WorldController.cc
WorldPlugin/: CMakeLists.txt  ColorLog.hh  SmoresModule.cc  SmoresModule.hh  SuperServer.cc  SuperServer.hh  WorldServer.cc  WorldServer.hh
WorldPlugin/msgs/: command_message.proto
